# wordler

./: .gitignore  README.md  pyproject.toml
notebook/: test01.ipynb
play/webapp/: main.py
src/wordler/: const.py  constraint.py  data.py  optimize.py  solver.py  utils.py
