[tool.poetry]
name = "wordler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wordler", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.4"
ipykernel = "^6.29.1"
ipywidgets = "^8.1.1"
streamlit = "^1.31.0"
tqdm = "^4.66.1"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
